Changed nav background color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 <header>
   <!-- Navbar-->
-  <nav id="navbar" class=" fixed top-0 left-0 w-full z-50">
+  <nav id="navbar" class=" fixed top-0 left-0 w-full z-50 bg-darknavy">
   <div class="container mx-auto  md:max-w-screen-xl px-6  grid grid-cols-2 items-center py-4 md:grid-cols-3 md:px-8 md:py-6 lg:px-14 ">
 
       <!-- Left: Hamburger -->
