moved slider buttons

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
           </div>
           </div>  
           <!-- Controls -->
-          <button class="custom-prev absolute left-[-20px] top-1/2 -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-prev absolute left-[-20px] top-[250px] -translate-y-1/2 border border-gold z-30 bg-gold">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-left.png" alt="Previous">
           </button>
 
-          <button class="custom-next absolute right-[-20px] top-1/2 -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-next absolute right-[-20px] top-[250px] -translate-y-1/2 border border-gold z-30 bg-gold">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-right.png" alt="Next">
           </button>
 </div>
