add number progress bar to slider

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
       </div>
       <div class="relative">
       
+        <div id="counter" class="absolute top-[342px] left-[228px] w-[100px] text-center z-10 font-custom1 text-2xl text-gold bg-darknavy py-2  ">01 / 05</div>
     
-
     <div class="services-slide pt-10 sm:pl-10 md:pt-16  ">
       <!-- Slide 1 -->
         <div class="">
-          <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">01</div>
+          <!-- <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">01</div> -->
            <img class="relative w-[500px] h-[350px] object-cover filter grayscale contrast-110"
                src="./images/cg-present.jpg" alt="team">
           <div class="text-darknavy py-4">
@@ -161,7 +161,7 @@
         </div>
       <!-- Slide 2 -->
         <div class=" ">
-            <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">02</div>
+            <!-- <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">02</div> -->
            <img class="w-[500px] h-[350px] object-cover filter grayscale contrast-110"
                src="./images/womandla.jpg" alt="team">
           <div class="py-4">
@@ -172,7 +172,7 @@
         </div>
       <!-- Slide 3 -->
        <div class="">
-          <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">03</div>
+          <!-- <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">03</div> -->
           <img class="w-[500px] h-[350px] object-cover filter grayscale contrast-110 "
                src="./images/teammeeting.jpg" alt="team">
           <div class="py-4 ">
@@ -184,7 +184,7 @@
         </div>
       <!-- Slide 4 -->
         <div class="">
-            <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">04</div>
+            <!-- <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">04</div> -->
              <img class="w-[500px] h-[350px] object-cover filter grayscale contrast-110 "
                   src="./images/laptop.jpg" alt="team">
           <div class="py-4">
@@ -195,7 +195,7 @@
         </div>
       <!-- Slide 5 -->
           <div class="">
-            <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">05</div>
+            <!-- <div class="absolute z-20 font-custom1 text-7xl text-gold/45 px-8">05</div> -->
               <img class=" w-[500px] h-[350px] object-cover filter grayscale contrast-110"
                    src="./images/web-build-crop.jpg" alt="web-build">
             <div class="py-4">
@@ -207,11 +207,11 @@
           </div>
           </div>  
           <!-- Controls -->
-          <button class="custom-prev absolute left-[-20px] top-[250px] -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-prev absolute left-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-gold">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-left.png" alt="Previous">
           </button>
 
-          <button class="custom-next absolute right-[-20px] top-[250px] -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-next absolute right-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-gold">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-right.png" alt="Next">
           </button>
 </div>
