--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
       </div>
       <div class="relative">
       
-        <div id="counter" class="absolute top-[342px] left-[228px] w-[100px] text-center z-10 font-custom1 text-2xl text-gold bg-darknavy py-2  ">01 / 05</div>
     
     <div class="services-slide pt-10 sm:pl-10 md:pt-16  ">
       <!-- Slide 1 -->
@@ -207,11 +206,11 @@
           </div>
           </div>  
           <!-- Controls -->
-          <button class="custom-prev absolute left-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-prev absolute left-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-offwhite">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-left.png" alt="Previous">
           </button>
 
-          <button class="custom-next absolute right-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-gold">
+          <button class="custom-next absolute right-[-20px] top-[240px] -translate-y-1/2 border border-gold z-30 bg-offwhite">
             <img class="w-10 md:w-12" src="./images/logo-and-icons/arrow-right.png" alt="Next">
           </button>
 </div>
