resized bg-image for desktop

--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
                inset-0 
                bg-[url('images/Abdeyah-presentation.JPG')] 
                [background-position-x:75%]
-              
+               
                bg-no-repeat 
                sm:bg-center 
                bg-cover 
-               filter grayscale contrast-110">
+               filter grayscale contrast-110
+               lg:bg-[length:120%_120%] ">
               </div>
 
   <!-- Layered overlays -->
