--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
   </section>
 <!-- FAQ SECTION -->
-<section id="faq" class="container mx-auto max-w-screen-xl px-6 md:px-16 py-16 md:py-24 text bg-offwhite"> 
+<section id="faq" class="container mx-auto max-w-screen-xl px-6 md:px-16 py-10 md:py-24 text bg-offwhite"> 
   <h2 class="text-center mx-auto text-2xl leading-tight mb-20 md:text-5xl font-custom1 md:max-w-3xl">
     Got Questions? We&apos;ve Got Answers.
   </h2>
@@ -364,7 +364,7 @@
 
   <!-- CTA content -->
   <div class="relative z-10 flex flex-col justify-center items-center md:items-start px-8 pt-10 md:px-20 md:py-20 md:mt-32 text-offwhite">
-    <h2 class="text-2xl text-center mt-24 md:mt-10 md:text-left md:max-w-2xl md:text-5xl font-custom1 mb-4 leading-relaxed lg:text-7xl">
+    <h2 class="text-2xl text-center mt-24 pt-8 md:pt-0 md:mt-10 md:text-left md:max-w-2xl md:text-5xl font-custom1 mb-4 leading-relaxed lg:text-7xl">
       Let&apos;s work <span class="text-gold">together</span>
       to bring your projects to <span class="text-gold">life</span>
     </h2>
